--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -1,9 +1,102 @@
 
 
 <div class="container body-container">
-    
+    <!-- Row 1 -->
+    <div class="row justify-content-center">
+        <!-- Column 1 -->
+        <div class="col-lg-4">
+            <!-- Card -->
+            <div class="card testimonial-card">
 
+                <!-- Bacground color -->
+                <div class="card-up blue-gradient lighten-1">
+                </div>
 
+                <!-- Avatar -->
+                <div class="avatar mx-auto white"><img src="~/images/default_pic.jpg" class="rounded-circle" alt="Johnny boy default pic">
+                </div>
 
+                <div class="card-body">
+                    <!-- Name -->
+                    <h4 class="card-title">User Name</h4>
+                    <hr>
+                    <!-- Quotation -->
+                    <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
+                </div>
+            </div>
+            <!-- Card -->
+        </div>
+        <!-- Column 1 -->
+    </div>
+    <!-- Row 1 -->
+
+    <!-- Row 2 -->
+    <div class="row">
+        <div class="col">
+
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                    </tr>
+                </thead>
+                    <tbody>
+                        <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>mdo</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>fat</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>twitter</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <table class="table">
+                    <thead class="thead-light">
+                        <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>mdo</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>fat</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>twitter</td>
+                        </tr>
+                    </tbody>
+                </table>
+        </div>
+    </div>
+    <!-- Row 2 -->
 
 </div>
