--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-@model List<BookCave.Models.ViewModels.BookListViewModel>
+@model List<BookCave.Models.ViewModels.BookViewModel>
 <div class="container pt-5">
     <section class="section my-5">
         <div class="table-responsive">
