--- a/Views/Manage/AddEmployee.cshtml
+++ b/Views/Manage/AddEmployee.cshtml
@@ -17,11 +17,32 @@
             </div>
 
             <div class="form-group row d-flex">
+                <p class="label col-md-2 pt-2 form-control-lg">First Name</p>
+                <div class="col-md-10">
+                    <input class="form-control pt-0 form-lg form-control-lg" id="FirstName" type="text" asp-for="FirstName">
+                </div>
+            </div>
+
+            <div class="form-group row d-flex">
+                <p class="label col-md-2 pt-2 form-control-lg">Last Name</p>
+                <div class="col-md-10">
+                    <input class="form-control pt-0 form-lg form-control-lg" id="LastName" type="text" asp-for="LastName">
+                </div>
+            </div>
+
+            <div class="form-group row d-flex">
                 <p class="label col-md-2 pt-2 form-control-lg">Password</p>
                 <div class="col-md-10">
-                    <input class="form-control pt-0 form-control-lg" id="Title" type="text" asp-for="Password">
+                    <input class="form-control pt-0 form-control-lg" id="Title" type="password" asp-for="Password">
                 </div>
-            </div>    
+            </div>
+
+            <div class="form-group row d-flex">
+                <p class="label col-md-2 pt-2 form-control-lg">Confirm Password</p>
+                <div class="col-md-10">
+                    <input class="form-control pt-0 form-control-lg" id="ConfirmTitle" type="password" asp-for="ConfirmPassword">
+                </div>
+            </div>     
 
             <div class="form-inline mt-2 mb-4 row" id="typeSelector">
                 <div class="form-check col">
