--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -31,13 +31,13 @@
                         <td></td>
                         <td>@book.Title</td>
                         <td>@book.Type</td>
-                        <td><span id="price"></span></td>
+                        <td><span id="price"><strong>@book.Price $</strong></span></td>
                         <td class="md-form text-center text-sm-center">
-                            <button class="btn btn-sm btn-primary btn-rounded waves-effect waves-light" id="incrementQty">+</button>
+                            <button class="btn btn-sm btn-primary btn-rounded waves-effect waves-light">+</button>
                             <input type="text" class="text-center col-md-1" id="qty" value="1">
-                            <button class="btn btn-sm btn-primary btn-rounded waves-effect waves-light" id="decrementQty">-</button>
+                            <button class="decremntQty btn btn-sm btn-primary btn-rounded waves-effect waves-light">-</button>
                         </td>
-                        <td><span id="amount"></span></td>
+                        <td><strong><p id="amount">@book.Price $</p></strong></td>
                         <td>
                             <button type="button" class="btn btn-sm btn-danger waves-effect waves-light">X</button>
                         </td>
@@ -52,4 +52,5 @@
         <span></span>
         <button type="button" class="btn btn-primary btn-rounded waves-effect waves-light">Complete purchase</button>
     </div>
+    <button class="btn btn-primary" id="gaur">hallo</button>
 </div>
