--- a/Views/Search/Results.cshtml
+++ b/Views/Search/Results.cshtml
@@ -1,5 +1,5 @@
 @model List<BookCave.Models.ViewModels.BookViewModel>
-    <div class="card">
+    <!--<div class="card">
         <div class="card-body row">
             <div class="col-md-2">
                 <select asp-for="GenreIds" id="genreList" class="mdb-select colorful-select dropdown-primary" multiple searchable="Search here..">
@@ -20,7 +20,7 @@
                 </select>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="row col-lg-8 col-md-12 offset-lg-2 wow fadeIn mb-5 container body-container">
         @foreach(var book in Model) {
         <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch">
